updating to .NET 8
