# src/Client/swagger.json
@@ -1,9 +1,9 @@
 {
-  "x-generator": "NSwag v13.20.0.0 (NJsonSchema v10.9.0.0 (Newtonsoft.Json v13.0.0.0))",
+  "x-generator": "NSwag v14.0.0.0 (NJsonSchema v11.0.0.0 (Newtonsoft.Json v13.0.0.0))",
   "openapi": "3.0.0",
   "info": {
-    "title": "DockerTestsSample",
-    "version": "1.0.0"
+    "title": "Docker tests sample API",
+    "version": "v1"
   },
   "paths": {
     "/v1/people/{id}": {
@@ -11,7 +11,7 @@
         "tags": [
           "Person"
         ],
-        "operationId": "CreatePerson",
+        "operationId": "Person_Create",
         "parameters": [
           {
             "name": "id",
@@ -33,6 +33,7 @@
               }
             }
           },
+          "required": true,
           "x-position": 2
         },
         "responses": {
@@ -72,7 +73,7 @@
         "tags": [
           "Person"
         ],
-        "operationId": "GetPerson",
+        "operationId": "Person_Get",
         "parameters": [
           {
             "name": "id",
@@ -112,7 +113,7 @@
         "tags": [
           "Person"
         ],
-        "operationId": "UpdatePerson",
+        "operationId": "Person_Update",
         "parameters": [
           {
             "name": "id",
@@ -134,6 +135,7 @@
               }
             }
           },
+          "required": true,
           "x-position": 2
         },
         "responses": {
@@ -173,7 +175,7 @@
         "tags": [
           "Person"
         ],
-        "operationId": "DeletePerson",
+        "operationId": "Person_Delete",
         "parameters": [
           {
             "name": "id",
@@ -208,7 +210,7 @@
         "tags": [
           "Person"
         ],
-        "operationId": "GetAllPeople",
+        "operationId": "Person_GetAll",
         "responses": {
           "200": {
             "description": "",
@@ -233,21 +235,21 @@
         "type": "object",
         "additionalProperties": false,
         "properties": {
-          "Id": {
+          "id": {
             "type": "string",
             "format": "guid"
           },
-          "Name": {
+          "name": {
             "type": "string"
           },
-          "LastName": {
+          "lastName": {
             "type": "string"
           },
-          "BirthDate": {
+          "birthDate": {
             "type": "string",
             "format": "date"
           },
-          "Email": {
+          "email": {
             "type": "string",
             "nullable": true
           }
@@ -264,7 +266,7 @@
               "nullable": true
             },
             "properties": {
-              "Errors": {
+              "errors": {
                 "type": "object",
                 "additionalProperties": {
                   "type": "array",
@@ -288,7 +290,7 @@
               "nullable": true
             },
             "properties": {
-              "Errors": {
+              "errors": {
                 "type": "object",
                 "additionalProperties": {
                   "type": "array",
@@ -307,30 +309,26 @@
           "nullable": true
         },
         "properties": {
-          "Type": {
+          "type": {
             "type": "string",
             "nullable": true
           },
-          "Title": {
+          "title": {
             "type": "string",
             "nullable": true
           },
-          "Status": {
+          "status": {
             "type": "integer",
             "format": "int32",
             "nullable": true
           },
-          "Detail": {
+          "detail": {
             "type": "string",
             "nullable": true
           },
-          "Instance": {
+          "instance": {
             "type": "string",
             "nullable": true
-          },
-          "Extensions": {
-            "type": "object",
-            "additionalProperties": {}
           }
         }
       },
@@ -338,17 +336,17 @@
         "type": "object",
         "additionalProperties": false,
         "properties": {
-          "Name": {
+          "name": {
             "type": "string"
           },
-          "LastName": {
+          "lastName": {
             "type": "string"
           },
-          "BirthDate": {
+          "birthDate": {
             "type": "string",
             "format": "date"
           },
-          "Email": {
+          "email": {
             "type": "string",
             "nullable": true
           }
